Fix a button z-index

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ nav {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 30;
 }
 #combination > li, #idol-menu > li {
   width: 32%;
